# thai-painting-restoration

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
colab/: build.ipynb
images/painting/: README.md
images/synthetic/: README.md
src/: header.h  main.cpp
src/inpainter/: CreateLambdaMatrix.h  Divergence.h  Gradient.h  MergeColorResult.h  MultiColorSplitBergman.h  Signnum.h  SplitBergmanColorInpaint.h  SplitBergmanInpaint.h  toDoubleBand.h  uGaussKernel.h  uSubproblemSolver.h  wSubproblemSolver.h
tests/: Gradient.cpp  equal.hpp
